Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15
-
None
Description
Changes like "Deprecate message API" 6e448dd5918c70ddfd0d52f62522fa49c02e8ba8 https://codereview.qt-project.org/c/qt/qt3d/+/283444 added a lot of deprecations.
The resulting warnings do not become visible for examples/tests of the module itself since .qmake.conf adds the BUILD_QT3D_MODULE define which disables the deprecation.
However, when adding
DEFINES -= BUILD_QT3D_MODULE
to say examples/qt3d/simple-cpp/simple-cpp.pro, the result is:
qt3d/src/core/changes/qscenechange.h:63:16: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:113: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:113: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:294: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:403: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:81:29: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:90:94: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:92:81: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:104:83: warning: 'QNodeCommandPtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:119:88: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:120:97: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:124:99: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/transforms/qtransform.h:123:68: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/transforms/qtransform.h:127:64: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:63:16: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:113: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:113: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:294: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:64:403: warning: 'enum_type' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:81:29: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:90:94: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/changes/qscenechange.h:92:81: warning: 'ChangeFlag' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:104:83: warning: 'QNodeCommandPtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:119:88: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:120:97: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qnode.h:124:99: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/nodes/qentity.h:92:64: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/frontend/qcameralens.h:143:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/frontend/qcameralens.h:144:68: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/transforms/qtransform.h:123:68: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qt3d/src/core/transforms/qtransform.h:127:64: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/framegraph/qframegraphnode.h:64:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/framegraph/qtechniquefilter.h:74:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/texture/qabstracttexture.h:351:68: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/texture/qabstracttexture.h:360:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/frontend/qrendertargetoutput.h:114:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/framegraph/qclearbuffers.h:105:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/materialsystem/qmaterial.h:83:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/geometry/qgeometry.h:80:68: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/geometry/qgeometry.h:84:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/geometry/qgeometryrenderer.h:138:68: warning: 'QSceneChangePtr' is deprecated [-Wdeprecated-declarations] qtbase/include/Qt3DRender/../../../qt3d/src/render/geometry/qgeometryrenderer.h:142:74: warning: 'Qt3DCore::QNodeCreatedChangeBasePtr' is deprecated [-Wdeprecated-declarations] ...
Note that the example itself does not use any deprecated API; the Qt3D headers itself cause this (flag operators, usage of deprecated parameters, typedefs).
As an addition, "Fix deprecation syntax" 6e448dd5918c70ddfd0d52f62522fa49c02e8ba8 https://codereview.qt-project.org/c/qt/qt3d/+/284500 introduces a deprecation syntax which Clang 7 used in qdoc and Qt for Python does not like
qnodecreatedchange.h:84:49: error: expected unqualified-id
(see https://codereview.qt-project.org/c/pyside/pyside-setup/+/285128 ) and broken doc snapshot of QNodeCreatedChangeBase .